# vllm-tt-plugin

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yaml
docs/: SCHEDULING.md  install-vllm-tt.sh
examples/: offline_inference_tt.py  prompts_overlapping.json  server_example_tt.py
src/vllm_tt_plugin/: __init__.py  async_decode.py  config.py  engine.py  entrypoints.py  gemma4_reasoning_parser.py  gemma4_tool_parser.py  input_batch.py  lane_scheduler.py  launcher.py  loader.py  logger.py  logit_dump.py  logprobs.py  model_input.py  model_registry.py  model_runner.py  platform.py  scheduler.py  structured_output.py  worker.py
src/vllm_tt_plugin/utils/: __init__.py  dp_discovery.py
tests/: __init__.py  test_config.py  test_dp_modes.py  test_galaxy_dp_conversion.py  test_gemma4_tool_parser.py  test_lane_input_batch.py  test_lane_model_runner.py  test_lane_scheduler.py  test_num_available_blocks.py  test_sample_time_grammar.py  test_structured_output.py
tests/tt/: conftest.py  test_build_logprobs_from_topk.py  test_config.py  test_host_only_params.py  test_logprobs.py  test_request_isolation.py  test_seeding_and_variety.py  test_structured_output_dp1.py  test_tt_penalties.py  utils.py
